# Medianetpay

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.mock  README.md  _build_apk.bat  _set_api_url.bat  _start_backend.bat  _start_metro.bat  _start_mock.bat  _start_portal.bat  docker-compose.yml  link_body2.json  link_wc.json  pyproject.toml  start.bat
.github/workflows/: deploy-mock.yml  deploy.yml
Docs/: MediaNetPay_Arquitectura_Tecnica.md  MediaNetPay_Pitch.md  generate_ai_report.py  generate_pitch_pdf.py
Docs/docs science/: Analisis Macro Definitivo MediaNetPay.pptx
app/: config.py  db.py  main.py
app-mobile/: App.tsx  Configure Bundler  SETUP.md  app.json  jest.config.js  jest.setup.js  package-lock.json  package.json
app-mobile/.expo/: devices.json
app-mobile/android/: settings.gradle
app-mobile/src/: theme.ts
app/middleware/: auth.py  jwt_auth.py
app/models/: catalog_service.py  merchant.py  notification.py  payment_link.py  refund.py  transaction.py  transaction_log.py
app/schemas/: auth.py  catalog.py  charges.py  checkout.py  links.py  notification.py  refunds.py  softpos.py
app/utils/: encryption.py  logger.py  rate_limiter.py  slugify.py
frontend/landing/: DESIGN.md  (+2 more)
migrations/: env.py
mock_medianet/: server.py
portal/: next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts
scripts/: create_test_merchant.py  generar_roadmap_pdf.py  generate_neobank_roadmap.py  generate_widget_pdf.py  migrate.py  setup_db.py
static/: widget.js
tests/: conftest.py  test_charge_e2e.py
(+166 files in other folders)
